src/objects/pse__Revenue_Forecast__c.object
<CustomObject>
    <customHelpPage>pse__RevenueForecastHelp</customHelpPage>
    <description>Stores the revenue forecast for a project or an opportunity.</description>
    <fields>
        <fullName>pse__Actuals__c</fullName>
        <description>Contains the combined value of the Revenue Recognized to Date and the Revenue Pending Recognition fields.</description>
        <formula>pse__Revenue_Recognized_To_Date__c  +  pse__Revenue_Pending_Recognition__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Contains the combined value of the Revenue Recognized to Date and the Revenue Pending Recognition fields.</inlineHelpText>
        <label>Actuals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Last_Updated__c</fullName>
        <description>Date and time when this revenue forecast was last updated.</description>
        <inlineHelpText>Date and time when this revenue forecast was last updated.</inlineHelpText>
        <label>Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pse__Milestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the milestone this revenue forecast relates to.</description>
        <inlineHelpText>Lookup to the milestone this revenue forecast relates to.</inlineHelpText>
        <label>Milestone</label>
        <referenceTo>pse__Milestone__c</referenceTo>
        <relationshipLabel>Revenue Forecasts</relationshipLabel>
        <relationshipName>Revenue_Forecasts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the opportunity this revenue forecast relates to.</description>
        <inlineHelpText>Lookup to the opportunity this revenue forecast relates to.</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Revenue Forecasts</relationshipLabel>
        <relationshipName>Revenue_Forecasts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the project this revenue forecast relates to.</description>
        <inlineHelpText>Lookup to the project this revenue forecast relates to.</inlineHelpText>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Revenue Forecasts</relationshipLabel>
        <relationshipName>Revenue_Forecasts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Revenue_Pending_Recognition__c</fullName>
        <description>The revenue that is ready for recognition on this revenue forecast.</description>
        <inlineHelpText>The revenue that is ready for recognition on this revenue forecast.</inlineHelpText>
        <label>Revenue Pending Recognition</label>
        <summarizedField>pse__Revenue_Forecast_Type__c.pse__Revenue_Pending_Recognition__c</summarizedField>
        <summaryForeignKey>pse__Revenue_Forecast_Type__c.pse__Revenue_Forecast__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>pse__Revenue_Recognized_To_Date__c</fullName>
        <description>The revenue that has already been recognized on this revenue forecast.</description>
        <inlineHelpText>The revenue that has already been recognized on this revenue forecast.</inlineHelpText>
        <label>Revenue Recognized to Date</label>
        <summarizedField>pse__Revenue_Forecast_Type__c.pse__Revenue_Recognized_To_Date__c</summarizedField>
        <summaryForeignKey>pse__Revenue_Forecast_Type__c.pse__Revenue_Forecast__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Revenue__c</fullName>
        <description>The revenue that is scheduled for recognition on this revenue forecast.</description>
        <inlineHelpText>The revenue that is scheduled for recognition on this revenue forecast.</inlineHelpText>
        <label>Scheduled Revenue</label>
        <summarizedField>pse__Revenue_Forecast_Type__c.pse__Scheduled_Revenue__c</summarizedField>
        <summaryForeignKey>pse__Revenue_Forecast_Type__c.pse__Revenue_Forecast__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>pse__Time_Period__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to the time period set on this revenue forecast.</description>
        <inlineHelpText>Lookup to the time period set on this revenue forecast.</inlineHelpText>
        <label>Time Period</label>
        <referenceTo>pse__Time_Period__c</referenceTo>
        <relationshipLabel>Revenue Forecasts</relationshipLabel>
        <relationshipName>Revenue_Forecasts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Unscheduled_Revenue__c</fullName>
        <description>Revenue that is currently unscheduled.</description>
        <inlineHelpText>If there are months that do not contain any scheduled or actual revenue, the unscheduled revenue is spread evenly across those months, except for empty months that fall between months containing scheduled or actual revenue.</inlineHelpText>
        <label>Unscheduled Revenue</label>
        <summarizedField>pse__Revenue_Forecast_Type__c.pse__Unscheduled_Revenue__c</summarizedField>
        <summaryForeignKey>pse__Revenue_Forecast_Type__c.pse__Revenue_Forecast__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Revenue Forecast</label>
    <nameField>
        <displayFormat>RF-{00000000}</displayFormat>
        <label>Revenue Forecast Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revenue Forecasts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>